CSS: made #main wider , BUGFIX: answere key was being truncated, & some JSON have wrong image_hardcoded with wrong exntension name

--- a/src/app/type/type.component.css
+++ b/src/app/type/type.component.css
@@ -26,7 +26,7 @@ div{
 }
 
 #main{
-  width:30%;
+  width:40%;
   margin:auto;
   text-align: left;
 
